# spec-driven-architect-assistant

./: .gitignore  README.md  pyproject.toml
specs/: design.md  requirements.md  tasks.md
src/finops_agent/: llm_client.py  models.py
src/mcp_server/: data_loader.py  server.py
src/mcp_server/tools/: health.py  list_idle_ec2.py
src/spec_driven_architect_assistant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_fixtures.py  test_list_idle_ec2.py  test_llm_client.py  test_mcp_server.py  test_models.py  test_smoke.py
tests/fixtures/: synthetic_account_001.json
