[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-driven-architect-assistant"
version = "0.1.0"
description = "Cloud FinOps & Cost Optimization Agent built using Spec-Driven Development"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "Sanjay Thakur" }
]
license = { text = "MIT" }

# Runtime dependencies added in T-A-02
dependencies = [
    "pydantic>=2.6,<3.0",
    "python-dotenv>=1.0,<2.0",
    "typer>=0.12,<1.0",
    "openai>=1.30,<2.0",
    "mcp>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.5,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]